--- a/css/layout.css
+++ b/css/layout.css
@@ -455,6 +455,12 @@ ul#nav li.current a { color: #F06000; }
 }
 }
 
+#portfolio .x {
+   margin-bottom: 48px;
+   padding-bottom: 24px;
+   border-bottom: 1px solid #dadde5;
+}
+
 #portfolio h1 {
    font: 20px/30px 'opensans-semibold', sans-serif;
    text-transform: uppercase;
