--- a/css/layout.css
+++ b/css/layout.css
@@ -434,7 +434,7 @@ ul#nav li.current a { color: #F06000; }
 
 #portfolio {
   background: #ebeeee;
-   padding-top: 30px;
+   padding-top: 90px;
    padding-bottom: 60px;
 }
 
@@ -456,6 +456,7 @@ ul#nav li.current a { color: #F06000; }
 }
 
 #portfolio .x {
+   margin-bottom: 48px;
    padding-bottom: 24px;
    border-bottom: 1px solid #dadde5;
 }
